--- a/2-determine-VAK-userInput.ipynb
+++ b/2-determine-VAK-userInput.ipynb
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('LOSurvey.csv')"
+    "df = pd.read_csv('Dataset/LOSurvey.csv')"
    ]
   },
   {
