--- a/1-determine-VAK.ipynb
+++ b/1-determine-VAK.ipynb
@@ -86,7 +86,7 @@
     "                   \"I keep replaying in my mind what it is that has upset me\",\n",
     "                   \"Faces\",\n",
     "                   \"They avoid looking at you\",\n",
-    "                   \"I say \\\"it's great to see you!\\\"\",\n",
+    "                   \"I say \\\"it's great to see you!\\\"\"\n",
     "                  ]\n",
     "\n",
     "auditory_keywords = [\"Listen to or ask for an explaination\", \n",
