Added accuracy score

--- a/3-Data-Preparation-withQuestions.ipynb
+++ b/3-Data-Preparation-withQuestions.ipynb
@@ -960,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "bbc86556",
    "metadata": {},
    "outputs": [
@@ -971,8 +971,6 @@
       "Distinct values in 'Level of Study':\n",
       "Postgraduate\n",
       "Undergraduate\n",
-      "Master\n",
-      "PhD\n",
       "Certificate/Diploma\n"
      ]
     }
@@ -988,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "0762e2c6",
    "metadata": {},
    "outputs": [],
@@ -1005,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "56e0dcb6",
    "metadata": {},
    "outputs": [
@@ -1013,9 +1011,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "RM 3001 - 10 000\n",
+      "RM 10 001 - 25 000\n",
+      "Less than RM 3000\n",
       "RM 4,850 – RM10,959\n",
-      "More than RM10,960\n",
-      "Less than RM 4,849\n"
+      "Less than RM 4,849\n",
+      "More than RM10,960\n"
      ]
     }
    ],
