--- a/4-SVM.ipynb
+++ b/4-SVM.ipynb
@@ -426,15 +426,12 @@
     "    # Instantiate GridSearchCV\n",
     "    grid_search = GridSearchCV(SVC(random_state=42), param_grid, cv=5, scoring='accuracy')\n",
     "    \n",
-    "    # Fit the grid search to your data for the current learning object\n",
+    "    # Fit the grid search to the data for the current learning object\n",
     "    grid_search.fit(X_train, y_train[col])\n",
     "    \n",
     "    # Get the best parameters and best estimator for the current learning object\n",
     "    best_params = grid_search.best_params_\n",
     "    best_estimator = grid_search.best_estimator_\n",
-    "    \n",
-    "    # Save the best estimator (SVM model) to a file\n",
-    "#     joblib.dump(best_estimator, f\"svm_model_{col}.joblib\")\n",
     "    \n",
     "    # Store the best estimator in the dictionary for later use if needed\n",
     "    best_estimators[col] = best_estimator\n",
